# ex_rstar

./: .gitignore  README.md  generate_checksums.exs  mix.exs
.claude/plans/rustler-nif-setup/research/: libraries.md
.github/workflows/: hex-publish.yml  release.yml
config/: config.exs
lib/: ex_rstar.ex
lib/ex_rstar/: native.ex  three_d.ex
native/rstar_nif/: Cargo.toml
native/rstar_nif/src/: lib.rs
test/: ex_rstar_test.exs  ex_rstar_three_d_test.exs
